--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <textarea name="" id=""></textarea><br> <br>
 
-        <button type="submit">Register</button>
+        <button type="submit">Register now</button>
 
     </form>
 
